# lapwing

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/source/: main.cpp
include/lapwing/: ifdbuf.h  ofdbuf.h
